--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
+add_subdirectory("prep")
+
 add_executable(sdlvc "main.cpp")
 
-include_directories(${PUGIXML_HDR})
-
-target_link_libraries(sdlvc ${PUGIXML_LIB})
+target_link_libraries(sdlvc xmlpreprocessor)
