Less fancy names

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_subdirectory("prep")
+add_subdirectory("xmlproc")
 
 add_executable(sdlvc "main.cpp")
 
-target_link_libraries(sdlvc xmlpreprocessor)
+target_link_libraries(sdlvc xmlprocessor)
