CMakeLists.txt files adjustment

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,10 @@
 cmake_minimum_required(VERSION 3.5)
 project(S_DLV_Client)
 
-# Read and edit the following file before building
-include("Dependencies.cmake")
+# pugixml 1.7 root directory
+set(PUGIXML_DIR "")
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -g")
+# CXX flags
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
 add_subdirectory("src")
