NWInterface draft + simplified CMakeLists files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,9 @@ project(S_DLV_Client)
 # pugixml 1.7 root directory
 set(PUGIXML_DIR "")
 
+# dlib 19.0 root directory
+set(DLIB_DIR "")
+
 # CXX flags
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
