--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,8 @@
+add_subdirectory("net")
 add_subdirectory("xmlproc")
 
 add_executable(sdlvc "main.cpp")
 
-target_link_libraries(sdlvc xmlprocessor)
+target_link_libraries(sdlvc
+        nwinterface
+        xmlprocessor)
