--- a/src/net/CMakeLists.txt
+++ b/src/net/CMakeLists.txt
@@ -1,5 +1,3 @@
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDLIB_NO_GUI_SUPPORT")
-
 set(DLIB_ALL_SOURCE_CPP "${DLIB_DIR}/dlib/all/source.cpp")
 
 if(${WIN32})
@@ -9,6 +7,8 @@ endif()
 add_library(nwinterface
         ${DLIB_ALL_SOURCE_CPP}
         "NWInterface.cpp")
+
+target_compile_definitions(nwinterface PUBLIC -DDLIB_NO_GUI_SUPPORT)
 
 target_include_directories(nwinterface PUBLIC ${DLIB_DIR})
 
